# ChangeLog for gnome-extra/evolution-data-server
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.404 2014/11/13 11:47:52 pacho Exp $

  13 Nov 2014; Pacho Ramos <pacho@gentoo.org>
  -evolution-data-server-2.32.3-r3.ebuild,
  -evolution-data-server-3.12.7.1.ebuild,
  -files/e-d-s-camel-skip-failing-test.patch,
  -files/evolution-data-server-2.31-gentoo_etc_services.patch,
  -files/evolution-data-server-2.32.3-g_thread_init.patch,
  -files/evolution-data-server-2.32.3-gmodule-explicit.patch,
  -files/evolution-data-server-2.32.3-imap-move.patch,
  -files/evolution-data-server-2.32.3-libical-0.48.patch,
  -files/evolution-data-server-2.32.3-libxml2-2.9.patch,
  -files/fix_relink_command.pl:
  Drop old (#508854)

*evolution-data-server-3.12.8 (11 Nov 2014)

  11 Nov 2014; Pacho Ramos <pacho@gentoo.org>
  +evolution-data-server-3.12.8.ebuild, -evolution-data-server-3.12.6.ebuild:
  Version bump, drop old

*evolution-data-server-3.12.7.1 (15 Oct 2014)

  15 Oct 2014; Mart Raudsepp <leio@gentoo.org>
  +evolution-data-server-3.12.7.1.ebuild:
  Version bump for bug fixes

  02 Oct 2014; Pacho Ramos <pacho@gentoo.org>
  evolution-data-server-3.12.6.ebuild:
  Needs gdbus-codegen (#524168 by Marc Vinyals)

*evolution-data-server-3.12.6 (24 Sep 2014)

  24 Sep 2014; Pacho Ramos <pacho@gentoo.org>
  +evolution-data-server-3.12.6.ebuild, -evolution-data-server-3.10.4.ebuild,
  -evolution-data-server-3.12.3.ebuild:
  Version bump, drop old

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
  evolution-data-server-3.12.4.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org>
  evolution-data-server-3.12.4.ebuild:
  Stable for amd64, wrt bug #512912

*evolution-data-server-3.12.4 (14 Jul 2014)

  14 Jul 2014; Pacho Ramos <pacho@gentoo.org>
  +evolution-data-server-3.12.4.ebuild, -evolution-data-server-3.12.2.ebuild:
  Version bump, drop old
