@@ -4,14 +4,16 @@ Hash: SHA256
 AUX calentry.schema 3661 SHA256 107d60463833d5ceb5f752335dd07fef303093c58a51fb03405fed5837999431 SHA512 56606848319539b8c9af732a5d572db44e2d7da433b1689ef7f14a283880951e10d5fc39f27245a7ddc8f0cb2e7563a757060020c17e5411f875cae10b119834 WHIRLPOOL 2255a4b0b98f55476388bb97ac5bf1bf2b7107b56c2a93f55142e7ae0892c8f93874fd0731663362bacb4ad85302a6cb8a22a7228bba0724fb45d1eb37f406a1
 DIST evolution-data-server-3.12.4.tar.xz 5450044 SHA256 5e424ec560e46e0b26d290d04ad5146d9b313a956abcf99ef46ac3d8633060c7 SHA512 24e3ff14c54845c22e038034ea537e5a1f9a57cd7d7aab8a5b16db3a40bf394282c47467b2b5829ab577e275eaabcd566b4a9ba1a18dd185f4dbe0818ff94cc8 WHIRLPOOL f8989993970adbcd10fd3511d4ad0ceeff6897509c4f048c3c993be6ef6de858fe1a20889eaeebda096b31b159a5b0dfd68cea191bfad88330c2662cf295ee41
 DIST evolution-data-server-3.12.8.tar.xz 5392696 SHA256 06fb4b9a1137b77a53e94eb69e4aeedd8f92d1bd1cfa0175f607660dd3b30818 SHA512 570b2c7b160a625517bc85de690f3fad03bef0fbb8bd2019e597f3a4071833478bae64c253a4fcb97c9025b8f1f97e927729caa484c207bb486d9891faccfcd6 WHIRLPOOL 15e9b3bae7b1e24c10e497a9b17571a26bc35e15b871d6a56ad5076a2795f2a86aa1b3d753f4dc1fe98b0c38155522a9bde983d3484c65e6a94b3d684840c259
+DIST evolution-data-server-3.12.9.tar.xz 5395276 SHA256 2f6cb7fe315cdc20938e08e2c724fe9364d9a72801a41b05f77367b6790aaee0 SHA512 3f342091fe2ee08cf5eaa556819bae1c667c97b102da274158e658ef32b089b9c8703a4c9b8c3e3453b04808ef481645a8e86ddff6af0f84424aaa372bd70dd2 WHIRLPOOL 9d2d21e09c46060d2fbc2427fb4689b6a3cc25eb9929f8a66eecc6c3a9c11f5b697b38c85d09ed29c9513c6b6fc97d0006971900429792b96395baad05fb7671
 EBUILD evolution-data-server-3.12.4.ebuild 3418 SHA256 fad4cbd71ebb534ab8349a655e9f708817736ed98fa9d3be7c858433ec45a0c7 SHA512 f329f0d073e21f473e98fc4b0a8b1945c13f776c540648a1673a8e299182fc8032623fb5eb063330090002754304acd9c06820c4d965d5c7e00356957140b647 WHIRLPOOL 284db3b3144be320d4f17f33beabd0c8dc1221804613a73ae5396a009e852109ad8ce263feca5970967d3e7ddff926b114ddda8feba456b3d9e7faf66a78ab91
 EBUILD evolution-data-server-3.12.8.ebuild 3461 SHA256 079e3dc7267e2e680b3019d4ee43554cdeda7be568e697961827baa2918a49f2 SHA512 12f9b3f5e65549afc8ed6603d07a8f26784bed648ac14505d1a8f9a7bbf97c2fe51431004833d3970a79aedb97b7c69b019d33f04831290ade4aff1f6ad3f28c WHIRLPOOL 0ee1d6fb2561675863894b02a13ee2e2f0c46d56f566364458adc75adf5e5abae14dbc1a280af216b3eca2ea4ab41694a8830eaefbd85e1f428dfa4595906807
-MISC ChangeLog 78606 SHA256 0a0788f4d9cef2d8b92248083be9cea0c56207008cddc5870d7b8b44e5224fd3 SHA512 fd1903b598cc2218297ebf1fdafb03e7f479ca4d0dc7351cb21f800defa358646f4cb61cc88ad3d833c4f88f7cb153c4486f31627929f40df6a8f474806e66a3 WHIRLPOOL 85b82c33888c1675430bf744bc1555ddd2649606cebe6dd0b61fb604df4d58f97706468029d91b6f7199bea1b65a6fa84e7e1c7c8c4fe5d0d3cb2861c7530c87
+EBUILD evolution-data-server-3.12.9.ebuild 3427 SHA256 e64fd10de10c24048183df9da48c86d3f0ed161d1dacfada6f184143169f95b5 SHA512 d2ccb0e961cc21c3c1e34fa3d8b0f20606ac2641cda9a375b9c39d5111a5a72d8860d00402560810f649b8a180cb06de95509cd282e05eb7f8a712b89123d303 WHIRLPOOL b90910cb2ce743b4a9c81668f5a2b6ec4322079a4af0c9b6167a4cb6a3eee87a92cc9d1b3086c4d6c8ed568a2afa0717c06a36ecf589d228be80897883bba134
+MISC ChangeLog 78829 SHA256 a286faa33014e3bd0c20c144db93995c176f6291a793e194561967d57decc318 SHA512 72eff25af4c465d1e513bdded8b3d6334d928283e9cac9fc2c0e78a140586c4be0d739d52e8c57471b15cf519c2b03c014ffdc639264438ea645855bbf80894b WHIRLPOOL 42b479b86d2b0e09db5be7a1dfd23da77ffec45204f03554d9ea22b292c03d8d52dc9bb6c5b6d3fd1204efdc473dee70b2ea14134d3247055d22558729624d86
 MISC metadata.xml 506 SHA256 3b17f5d3335559ed8198c33f0866c39d854a452218344082d4453dddf555710b SHA512 4916d65f5fc5ccf4ddb5bd12717e3d839e01240df064c0b485f106713aa28573dd9a79944d2f4db0371fd766f8ff2938580b91fc90d2a72e44b9829f4e026b89 WHIRLPOOL 6b863b456d3e3c87a88cfcdfaaa105b4620524d840af99cafb9a70ea6ae619113e3c5e9575f3f7d4e487a695aa26aa3246e79c36059fa555f158d5fc3923a86a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRkmmoACgkQCaWpQKGI+9RX7ACfaWMN2b/O1bXP6YP3H7jXAlY2
-h68An1IO2X2nGwiCJLS7gi6PO2gqHpcg
-=o/Vk
+iEYEAREIAAYFAlSHTCQACgkQCaWpQKGI+9R8PgCfdeHRLX0JYmvAbIoiOQIaGEdO
+YSUAnjWJv5GZ4oml1/CwPCC2ya4JAXhr
+=5BxD
 -----END PGP SIGNATURE-----
