@@ -1,6 +1,13 @@
 # ChangeLog for gnome-extra/evolution-data-server
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.404 2014/11/13 11:47:52 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.405 2014/12/09 19:23:15 pacho Exp $
+
+*evolution-data-server-3.12.9 (09 Dec 2014)
+
+  09 Dec 2014; Pacho Ramos <pacho@gentoo.org>
+  +evolution-data-server-3.12.9.ebuild:
+  Version bump, also 3.12 cycle supports python3 for building too (upstream bug
+  #705028)
 
   13 Nov 2014; Pacho Ramos <pacho@gentoo.org>
   -evolution-data-server-2.32.3-r3.ebuild,
